--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <p><strong>Age:</strong> 27</p>
             <div class="skills">
                 <ul>
-                    <h2>SKILLS</h2>
+                    <h3>SKILLS</h3>
                     <li>AutoCAD – 2D Drafting<div class="progress-bar"><div class="progress" style="width: 90%;"></div></div></li>
                     <li>AutoCAD – 3D Modeling<div class="progress-bar"><div class="progress" style="width: 85%;"></div></div></li>
                     <li>AutoCAD Map 3D – GIS & Mapping<div class="progress-bar"><div class="progress" style="width: 50%;"></div></div></li>
@@ -138,10 +138,24 @@
                     <li>Microsoft Office Suite Proficiency<div class="progress-bar"><div class="progress" style="width: 70%;"></div></div></li>
                     <li>Google Maps Pro – Mapping & Location Tools<div class="progress-bar"><div class="progress" style="width: 65%;"></div></div></li>
                     <li>CCTV Layout Design (AutoCAD)<div class="progress-bar"><div class="progress" style="width: 45%;"></div></div></li>
+              <section class="mb-6">     
+                <h4>CHARACTER REFERENCE</h4>
+                    <p">JAN ALEC JOSHUA BAHENA, RME</p>
+                    <p>Mechanical Modeller, GHD</p>
+                    <p>Phone: +639321406007</p>
+
+                    <p">JUWAN NATHANIEL FLORITA</p>
+                    <p>Plant 3D Modeller, GHD</p>
+                    <p class="mt-4">Phone: 09396309298</p>
+
+                    <p">PRINCESS Z. BUCE, ECT</p>
+                    <p>Designer TA of FiberHome Cebu</p>
+                    <p>Phone: 09491701808</p>
+                </section> 
                 </ul>
             </div>
-            <p><strong>Frameworks/Tools:</strong> Bootstrap, Materialize, Stylus, SASS, Less, Gulp, Webpack, Grunt, Git</p>
-            <a href="#">DOWNLOAD CV</a>
+           
+
         </div>
         <div class="main-content">
             <div class="header">
