--- a/resume1.html
+++ b/resume1.html
@@ -548,7 +548,7 @@
                         </ul>
                         <p class="bold-title">PRINCESS Z. BUCE, ECT</p>
                         <ul class="list-disc pl-5 text-gray-300">
-                            <li>Designer TA of FiberHome Cebu</li>
+                            <li>Team Leader, FiberHome Cebu</li>
                             <li>Phone: 09491701808</li>
                         </ul>
                     </div>
@@ -575,4 +575,5 @@
         }
     </script>
 </body>
+
 </html>
