--- a/resume1.html
+++ b/resume1.html
@@ -638,7 +638,7 @@
                         </ul>
                         <p class="bold-title">SEMINAR ON FUNDAMENTALS OF ROBOTICS</p>
                         <ul class="list-disc pl-5 text-gray-300">
-                            <li>Alison Online Course</li>
+                            <li>Camarines Sur Polytechnic Colleges</li>
                             <li>October 18, 2022</li>
                         </ul>
                     </div>
@@ -706,3 +706,4 @@
     </script>
 </body>
 </html>
+
