--- a/index.html
+++ b/index.html
@@ -409,9 +409,27 @@
                                 <div class="progress" style="width: 85%;"></div>
                             </div>
                         </div>
+                         <div class="skill-item">
+                            <div class="skill-header">
+                                <span class="text-sm">AutoCAD Plant 3D – Comprehensive 3D Plant Design</span>
+                                <span class="text-xs text-yellow-500">Advanced</span>
+                            </div>
+                            <div class="progress-bar">
+                                <div class="progress" style="width: 65%;"></div>
+                            </div>
+                        </div>
                         <div class="skill-item">
                             <div class="skill-header">
-                                <span class="text-sm">AVEVA E3D – Plant Design</span>
+                                <span class="text-sm">AutoCAD Map 3D - 3D Mapping and Geospatial Site Design</span>
+                                <span class="text-xs text-yellow-500">Advanced</span>
+                            </div>
+                            <div class="progress-bar">
+                                <div class="progress" style="width: 65%;"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <div class="skill-header">
+                                <span class="text-sm">AVEVA E3D – Advanced 3D Plant Design</span>
                                 <span class="text-xs text-yellow-500">Proficient</span>
                             </div>
                             <div class="progress-bar">
