--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                         </div>
                         <div class="skill-item">
                             <div class="skill-header">
-                                <span class="text-sm">AVEVA E3D – Advanced 3D Plant Design</span>
+                                <span class="text-sm">E3D / AVEVA System Administrator</span>
                                 <span class="text-xs text-yellow-500">Proficient</span>
                             </div>
                             <div class="progress-bar">
@@ -554,10 +554,10 @@
                         </div>
                         <h4 class="text-lg font-medium mt-2">Responsibilities:</h4>
                         <ul class="list-disc pl-5 text-gray-300">
-                            <li>Maintained and troubleshot servers and employees' computers when issues or errors occurred.</li>
-                            <li>Designed various types of valves and pipe fittings using AVEVA E3D (Catalogue).</li>
-                            <li>Utilized AutoCAD Plant 3D, AutoCAD 2D, and AutoCAD 3D for design purposes.</li>
-                            <li>Designed tarpaulin layouts for company events and occasions using Photoshop.</li>
+                            <li>Maintained and troubleshot servers and employees' computers to resolve issues and errors.</li>
+                            <li>Managed and administered the AVEVA E3D environment for an international plant design project. Responsibilities included E3D installation and configuration, catalogue and specification editing (valves, tees, elbows, caps, etc.), parameter customization based on 2D drawings from overseas, and troubleshooting model/database issues for CAD operators.</li>
+                            <li>Utilized AutoCAD Plant 3D, AutoCAD 2D, and AutoCAD 3D for various design tasks.</li>
+                            <li>Created tarpaulin layouts for company events and occasions using Photoshop.</li>
                         </ul>
                         <p class="bold-title">SURVEY PROGRAMMER</p>
                         <div class="text-gray-400">
@@ -724,4 +724,5 @@
     </script>
 </body>
 </html>
+
 
